--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-dasdasd
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AC17063</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/13/13973.png" type="image/x-icon">
+</head>
+<body>
+    <h1 class="titulo">TOP 3 JUEGOS DEL MES</h1>
+
+    <section>
+        <div>
+              <h2><span id="top">TOP 1:</span><span id="nombre">FORNITE</span></h2>
+              <p id="descripcion"><strong>Descripción: </strong> Fortnite es un mundo de experiencias múltiples. Dejaos caer en la isla y competid hasta ser los últimos jugadores (o equipos) que queden en pie.
+               Cread una isla personalizada con vuestras propias reglas. Quedad con vuestros amigos en una isla creada por una de vuestras amistades. 
+               O eliminad hordas de monstruos con otros jugadores para salvar el mundo </p>
+
+               <a href="https://www.epicgames.com/fortnite/es-ES/news/what-is-fortnite-beginners-guide#:~:text=Este%20juego%20de%20Fortnite%20es,y%20pasad%20a%20la%20ofensiva!" target="_blank">
+               <img src="imagenes/fortnite-battle-royale-1920x1080-864336699.jpg" height="auto" width="auto" alt="imagen del juego"></a>
+
+               <iframe width="560" height="363" src="https://www.youtube.com/embed/KJ4tXshgNBc?start=20" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    
+    <section>
+        <div>
+            <h2><span id="top">TOP 2:</span> <span id="nombre">CALL OF DUTY: WARZONE </span> </h2>
+            <p id="descripcion"><strong>Descripción: </strong> Warzones es el modo Battle Royale de Call of Duty: Modern Warfare. 
+             Un modo de juego que nos permitirá caer en una isla con otros 150 jugadores para comprobar quién es el último que queda en pie. Además del clásico estilo Battle Royale,
+             Warzone también incluirá un modo adicional llamado Plunder</p>
+
+             <a href="https://www.vidaextra.com/fps/todo-que-debes-saber-warzone-battle-royale-call-of-duty-horas-descarga-juego-cruzado-version-gratuita#:~:text=Warzones%20es%20el%20modo%20Battle,un%20modo%20adicional%20llamado%20Plunder." target="_blank">
+             <img src="imagenes/1366_2000.jpeg" alt="imagen del juego"></a>
+
+             <iframe width="560" height="363" src="https://www.youtube.com/embed/4C8aMCdxpo4?start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2><span id="top">TOP 3:</span><span id="nombre">LEAGUE OF LEGENDS</span></h2>
+            <p id="descripcion"><strong>Descripción: </strong> League of Legends es un juego de estrategia por equipos en el que dos equipos de cinco campeones se enfrentan para ver quién destruye antes la base del otro. Elige de entre un elenco de 140 campeones para realizar jugadas épicas, 
+             asesinar rivales y derribar torretas para alzarte con la victoria.</p>
+
+            <a href="https://www.leagueoflegends.com" target="_blanck"><img src="imagenes/202182610185270_1.jpg" alt=""></a>
+            <iframe width="560" height="363" src="https://www.youtube.com/embed/mDYqT0_9VR4?start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <footer>
+         <p>Copyright 2022------</p>
+         <p><a href="https://campus.ues.edu.sv/login/index.php" target="_blanck">Ley de Cookies</a></p>
+         <p>-----AC17063-Esteban Acosta-----</p>
+         <p>Visitanos en <a href="https://campus.ues.edu.sv/login/index.php" target="_blank">Universidad Nacional de el Salvador</a></p>
+    </footer>
+</body>
+</html>
