--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section>
         <div>
-              <h2><span id="top">TOP 1:</span><span id="nombre">FORNITE</span></h2>
+              <h2><span id="top">TOP 1:</span><span id="nombre">FORTNITE</span></h2>
               <p id="descripcion"><strong>Descripción: </strong> Fortnite es un mundo de experiencias múltiples. Dejaos caer en la isla y competid hasta ser los últimos jugadores (o equipos) que queden en pie.
                Cread una isla personalizada con vuestras propias reglas. Quedad con vuestros amigos en una isla creada por una de vuestras amistades. 
                O eliminad hordas de monstruos con otros jugadores para salvar el mundo </p>
